@@ -1,22 +1,21 @@
 package com.utkarshrthr.app.user.entity;
 
 import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashSet;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Entity
 @Table(name = "user")
+@Getter
+@Setter
 public class DAOUser extends MasterEntity implements UserDetails {
-
-    @Id
-    @GeneratedValue (strategy = GenerationType.IDENTITY)
-    private Integer id;
 
     @Column(length = 100, unique = true, nullable = false)
     private String username;
@@ -36,7 +35,8 @@ public class DAOUser extends MasterEntity implements UserDetails {
     @Column(nullable = false)
     private String password;
 
-    private boolean isActive;
+    @Column(nullable = false)
+    private boolean isActive = true;
 
     @ManyToMany(cascade = CascadeType.ALL, fetch = FetchType.LAZY)
     @JoinTable(
@@ -44,51 +44,7 @@ public class DAOUser extends MasterEntity implements UserDetails {
             joinColumns = @JoinColumn(name = "user_id"),
             inverseJoinColumns = @JoinColumn(name = "role_id")
     )
-    private Set<DAORole> roles = new HashSet<>();
-
-    public void setUsername(String username) {
-        this.username = username;
-    }
-
-    public String getFirstName() {
-        return firstName;
-    }
-
-    public void setFirstName(String firstName) {
-        this.firstName = firstName;
-    }
-
-    public String getLastName() {
-        return lastName;
-    }
-
-    public void setLastName(String lastName) {
-        this.lastName = lastName;
-    }
-
-    public String getTitle() {
-        return title;
-    }
-
-    public void setTitle(String title) {
-        this.title = title;
-    }
-
-    public String getEmail() {
-        return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
-    public String getUsername() {
-        return username;
-    }
+    private transient List<DAORole> roles = new ArrayList<>();
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
@@ -96,7 +52,7 @@ public class DAOUser extends MasterEntity implements UserDetails {
                 .stream()
                 .map(DAORole::getName)
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -117,25 +73,5 @@ public class DAOUser extends MasterEntity implements UserDetails {
     @Override
     public boolean isEnabled() {
         return this.isActive;
-    }
-
-    public String getPassword() {
-        return password;
-    }
-
-    public Set<DAORole> getRoles() {
-        return this.roles;
-    }
-
-    public void setRoles(Set<DAORole> roles) {
-        this.roles = roles;
-    }
-
-    public boolean isActive() {
-        return isActive;
-    }
-
-    public void setActive(boolean active) {
-        isActive = active;
     }
 }
